# labscriber

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-14-labscriber-implementation.md  2026-04-14-rich-cli-progress.md
docs/superpowers/specs/: 2026-04-14-rich-cli-progress-design.md
labscriber/: __main__.py  cli.py  config.py  diarize.py  ingest.py  merge.py  models.py  output.py  pipeline.py  setup_wizard.py  transcribe.py
tests/: test_merge.py  test_output.py  test_pipeline_helpers.py
